tests/ui/feature-gates/feature-gate-rustc-attrs-1.stderr
error[E0658]: use of an internal attribute
  --> $DIR/feature-gate-rustc-attrs-1.rs:3:1
   |
LL | #[rustc_variance]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[rustc_variance]` attribute is an internal implementation detail that will never be stable
   = note: the `#[rustc_variance]` attribute is used for rustc unit tests

error[E0658]: use of an internal attribute
  --> $DIR/feature-gate-rustc-attrs-1.rs:7:1
   |
LL | #[rustc_nonnull_optimization_guaranteed]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[rustc_nonnull_optimization_guaranteed]` attribute is an internal implementation detail that will never be stable
   = note: the `#[rustc_nonnull_optimization_guaranteed]` attribute is just used to document guaranteed niche optimizations in the standard library
   = note: the compiler does not even check whether the type indeed is being non-null-optimized; it is your responsibility to ensure that the attribute is only used on types that are optimized

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
